# santitools-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  get-version.py  index.ts  math.py  pyproject.toml  time.py
.github/workflows/: ci.yml  main.yml  pr-check.yml  publish.yml  release.yml  test.yml
src/santitools/: __init__.py  colors.py  filesystem.py  iter.py  math.py  time.py
tests/: test_colors.py  test_filesystem.py  test_math.py  test_time.py
